--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>golden-tech-beacon-bridge</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Teach Reach</title>
+    <meta name="description" content="Teach Reach" />
+    <meta name="author" content="Teach Reach" />
 
-    <meta property="og:title" content="golden-tech-beacon-bridge" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Teach Reach" />
+    <meta property="og:description" content="Teach Reach" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:card" content="Teach Reach" />
+    <meta name="twitter:site" content="Teach Reach" />
   </head>
 
   <body>
